--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,5 @@ jobs:
         cache: maven
     - name: Build and verify
       run: mvn --batch-mode --update-snapshots verify
+    - name: Generate Javadoc
+      run: mvn site
