--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Project CI
 
 on:
   push:
-    branches: [ "main" , "feature/autodocumentation" ]
+    branches: [ "main" ]
 
 jobs:
   build:
