Updated pom.xml for S4LJ usage

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,21 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- SLF4J API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version> <!-- Replace with the latest version -->
+        </dependency>
+
+        <!-- Logback for logging implementation -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.5</version> <!-- Replace with the latest version -->
+        </dependency>
+
     </dependencies>
 
 
