--- a/frontend/Building Administration/package.json
+++ b/frontend/Building Administration/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-dnd": "^3.0.2",
     "axios": "^1.6.3",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
